--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "rm -rf build/ && tsc",
-		"dev": "nodemon -x ts-node ./index.ts"
+		"build": "rm -rf build/ && tsc && rm -rf build/public/ && cp -r public/ build/public/ && cp -r views/ build/views/",
+		"dev": "nodemon -x ts-node ./index.ts",
+		"start": "node build/index.js"
 	},
 	"keywords": [],
 	"author": "",
