--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-	"name": "rest_server",
+	"name": "crsp-app",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "rm -rf build/ && tsc && rm -rf build/public/ && cp -r public/ build/public/ && cp -r views/ build/views/",
-		"dev": "nodemon -x ts-node ./index.ts",
+		"my-build": "rm -rf build/ && tsc && rm -rf build/public/ && cp -r public/ build/public/ && cp -r views/ build/views/",
+		"postinstall": "tsc && rm -rf build/public/ && cp -r public/ build/public/ && cp -r views/ build/views/",
+		"my-dev": "nodemon -x ts-node ./index.ts",
 		"start": "node build/index.js",
-		"concurrent": "npm run build && npm run start"
+		"concurrent": "npm run build && npm run start",
+		"deploy": "git add . && git commit -m Heroku && git push heroku master"
 	},
 	"keywords": [],
 	"author": "",
@@ -31,5 +33,8 @@
 		"nodemon": "^2.0.7",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.2"
+	},
+	"engines": {
+		"node": "12.18.4"
 	}
 }
